FIX:map - remove scrollbar in info window
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/operations/trunk@84423 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/Resources/Public/Css/operations.css
+++ b/Resources/Public/Css/operations.css
@@ -52,3 +52,4 @@
 /* map canvas */
 #map-canvas {height:260px;/*width:225px;clear:right;float:right;*/}
 #map-canvas img {max-width:none;}
+.gm-style-iw, .gm-style-iw > div {overflow:hidden !important;line-height:1.3em;}
